--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="dist/css/style.production.css"
+    />
   </head>
 
   <body>
