--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <section class="contact-me">
       <div class="contact-container">
         <h1 class="contact-title">Contact Me</h1>
-        <form action="./src/php/contact.php" method="post" class="contact-form">
+        <form action="./src/php/contact-form-process.php" method="post" class="contact-form">
           <div class="row">
             <div class="col-form_label">
               <label for="full-name"
