--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
                 required
                 type="text"
                 id="Name"
-                name="Name"
+                name="name"
                 placeholder="(First Name) (Last Name)"
               />
             </div>
@@ -87,7 +87,7 @@
                 required
                 type="text"
                 id="Email"
-                name="Email"
+                name="email"
                 placeholder="example@email.com"
               />
             </div>
@@ -100,7 +100,7 @@
             </div>
             <div class="col-form_input">
               <textarea
-                name="Message"
+                name="message"
                 id="Message"
                 placeholder="Write your message here..."
                 style="height: 200px;"
@@ -118,6 +118,13 @@
             </div>
           </div>
         </form>
+        <div id="error_message" style="width:100%; height:100%; display:none; ">
+          <h4>Error</h4>
+          Sorry there was an error sending your form.
+          </div>
+          <div id="success_message" style="width:100%; height:100%; display:none; ">
+          <h2>Success! Your Message was Sent Successfully.</h2>
+          </div>
       </div>
     </section>
 
@@ -161,6 +168,7 @@
       <img src="img/crue_logo.svg" alt="Crue Jameson" />
     </div>
 
+    <script src="src/js/mail-handler.js"></script>
     <script src="src/js/tota11y.min.js"></script>
   </body>
 </html>
