--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
               <input
                 required
                 type="text"
-                id="Name"
-                name="name"
+                id="name"
+                name="Name"
                 placeholder="(First Name) (Last Name)"
               />
             </div>
@@ -86,8 +86,8 @@
               <input
                 required
                 type="text"
-                id="Email"
-                name="email"
+                id="email"
+                name="Email"
                 placeholder="example@email.com"
               />
             </div>
@@ -100,8 +100,8 @@
             </div>
             <div class="col-form_input">
               <textarea
-                name="message"
-                id="Message"
+                name="Message"
+                id="message"
                 placeholder="Write your message here..."
                 style="height: 200px;"
               >
