--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,9 @@
       <img src="img/crue_logo.svg" alt="Crue Jameson" />
     </div>
 
-    <script src="src/js/mail-handler.js"></script>
+    <!-- www.123formbuilder.com script begins here -->
+<script type="text/javascript" defer src="//www.123formbuilder.com/embed/5586309.js" data-role="form" data-default-width="650px"></script>
+<!-- www.123formbuilder.com script ends here -->
     <script src="src/js/tota11y.min.js"></script>
   </body>
 </html>
