--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
               <input
                 required
                 type="text"
-                id="name"
+                id="Name"
                 name="Name"
                 placeholder="(First Name) (Last Name)"
               />
@@ -86,7 +86,7 @@
               <input
                 required
                 type="text"
-                id="email"
+                id="Email"
                 name="Email"
                 placeholder="example@email.com"
               />
@@ -101,7 +101,7 @@
             <div class="col-form_input">
               <textarea
                 name="Message"
-                id="message"
+                id="Message"
                 placeholder="Write your message here..."
                 style="height: 200px;"
               >
@@ -118,13 +118,6 @@
             </div>
           </div>
         </form>
-        <div id="error_message" style="width:100%; height:100%; display:none; ">
-          <h4>Error</h4>
-          Sorry there was an error sending your form.
-          </div>
-          <div id="success_message" style="width:100%; height:100%; display:none; ">
-          <h2>Success! Your Message was Sent Successfully.</h2>
-          </div>
       </div>
     </section>
 
@@ -168,9 +161,6 @@
       <img src="img/crue_logo.svg" alt="Crue Jameson" />
     </div>
 
-    <!-- www.123formbuilder.com script begins here -->
-<script type="text/javascript" defer src="//www.123formbuilder.com/embed/5586309.js" data-role="form" data-default-width="650px"></script>
-<!-- www.123formbuilder.com script ends here -->
     <script src="src/js/tota11y.min.js"></script>
   </body>
 </html>
