--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
             <div class="submit-container">
               <input type="submit" value="Submit" />
               <br />
-              <span style="font-size: 18px;" class="required-field"
+              <span style="font-size: 18px;" mailto="cruebeejameson@gmail.com" class="required-field"
                 >* Indicates a required field.</span
               >
             </div>
