--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,7 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="dist/css/style.production.css"
-    />
+    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
   </head>
 
   <body>
@@ -35,36 +31,44 @@
             <img src="img/crue_logo_small.svg" alt="Crue Jameson" />
           </li>
           <li role="presentation" class="right">
-            <a href="index.html" role="menuitem" target="_self">Home</a>
+            <a href="index.html" role="menuitem" target="_self">
+              Home
+            </a>
             <!-- This is BEM naming convention. (Block Element Modifier). -->
           </li>
           <li role="presentation">
-            <a href="about.html" role="menuitem" target="_self">About Crue</a>
+            <a href="about.html" role="menuitem" target="_self">
+              About Crue
+            </a>
           </li>
           <li role="presentation">
-            <a href="work.html" role="menuitem" target="_self"
-              >Crue's Projects</a
-            >
+            <a href="work.html" role="menuitem" target="_self">
+              Crue's Projects
+            </a>
           </li>
           <li role="presentation">
-            <a href="contact.html" role="menuitem" target="_self" class="active"
-              >Contact Crue</a
+            <a
+              href="contact.html"
+              role="menuitem"
+              target="_self"
+              class="active"
             >
+              Contact Crue
+            </a>
           </li>
         </ul>
       </nav>
     </header>
 
-    <section class="contact-me">
+    <section class="contact-me content">
       <div class="contact-container">
-        <h1 class="contact-title">Contact Me</h1>
-        <form action="./src/php/contact-form-process.php" method="post" class="contact-form">
+        <h1 class="main-title">Contact Me</h1>
+        <form action="" method="post" class="contact-form">
           <div class="row">
             <div class="col-form_label">
-              <label for="full-name"
-                ><span class="required-field">*</span>Name: (First and
-                Last)</label
-              >
+              <label for="full-name">
+                <span class="required-field">*</span>Name: (First and Last)
+              </label>
             </div>
             <div class="col-form_input">
               <input
@@ -79,8 +83,8 @@
           <div class="row">
             <div class="col-form_label">
               <label for="sender-email"
-                ><span class="required-field">*</span>Email</label
-              >
+                ><span class="required-field">*</span>Email
+              </label>
             </div>
             <div class="col-form_input">
               <input
@@ -94,25 +98,27 @@
           </div>
           <div class="row">
             <div class="col-form_label">
-              <label for="message"
-                ><span class="required-field">*</span>Send me a message!</label
-              >
+              <label for="message">
+                <span class="required-field">*</span>Send me a message!
+              </label>
             </div>
             <div class="col-form_input">
               <textarea
                 name="Message"
                 id="Message"
-                placeholder="Write your message here..."
                 style="height: 200px;"
-              >
-              </textarea>
+                placeholder="Type your message here..."
+              ></textarea>
             </div>
           </div>
           <div class="row">
             <div class="submit-container">
               <input type="submit" value="Submit" />
               <br />
-              <span style="font-size: 18px;" mailto="cruebeejameson@gmail.com" class="required-field"
+              <span
+                style="font-size: 18px;"
+                mailto="cruebeejameson@gmail.com"
+                class="required-field"
                 >* Indicates a required field.</span
               >
             </div>
@@ -128,35 +134,40 @@
         2215 N. Overland Trl.<br />
         80521<br />
         USA<br />
-        <a href="tel:+1-970-980-8519" class="button connection">Call Me! </a>
+        <a href="tel:+1-970-980-8519" class="button connection"
+          >Tel: (970)-980-8519</a
+        >
+        <br />
         <a href="skype:cruebeedoobie" class="button connection"
-          >Add me on Skype!
+          >Skype: @cruebeedoobie
         </a>
-        <a href="mailto:cruebeejameson@gmail.com" class="button connection"
-          >Email me!
+        <a href="mailto:ericcjameson@gmail.com" class="button connection"
+          >Email: ericcjameson@gmail.com
         </a>
       </div>
     </section>
 
-    <footer class="page-footer">
-      <p>Find Me On</p>
-      <div class="social-media">
-        <a href="https://github.com/Cruebee" target="_blank"
-          ><img src="img/github_icon.svg" alt="Github"
-        /></a>
-        <a href="https://twitter.com/cruebee" target="_blank"
-          ><img src="img/twitter_icon.svg" alt="Twitter"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
-          target="_blank"
-          ><img src="img/linkedin_icon.svg" alt="LinkedIn"
-        /></a>
-        <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
-          ><img src="img/instagram_icon.svg" alt="Instagram"
-        /></a>
-      </div>
-    </footer>
+    <div class="foot-wrap">
+      <footer class="page-footer">
+        <p>Find Me On</p>
+        <div class="social-media">
+          <a href="https://github.com/Cruebee" target="_blank"
+            ><img src="img/github_icon.svg" alt="Github"
+          /></a>
+          <a href="https://twitter.com/cruebee" target="_blank"
+            ><img src="img/twitter_icon.svg" alt="Twitter"
+          /></a>
+          <a
+            href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
+            target="_blank"
+            ><img src="img/linkedin_icon.svg" alt="LinkedIn"
+          /></a>
+          <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
+            ><img src="img/instagram_icon.svg" alt="Instagram"
+          /></a>
+        </div>
+      </footer>
+    </div>
     <div class="logo-container">
       <img src="img/crue_logo.svg" alt="Crue Jameson" />
     </div>
