update responsive design connect production css

--- a/about.html
+++ b/about.html
@@ -20,7 +20,11 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="dist/css/style.production.css"
+    />
   </head>
 
   <body>
@@ -1748,26 +1752,26 @@
       </section>
 
       <div class="foot-wrap">
-      <footer class="page-footer">
-        <p>Find Me On</p>
-        <div class="social-media">
-          <a href="https://github.com/Cruebee" target="_blank"
-            ><img src="img/github_icon.svg" alt="Github"
-          /></a>
-          <a href="https://twitter.com/cruebee" target="_blank"
-            ><img src="img/twitter_icon.svg" alt="Twitter"
-          /></a>
-          <a
-            href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
-            target="_blank"
-            ><img src="img/linkedin_icon.svg" alt="LinkedIn"
-          /></a>
-          <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
-            ><img src="img/instagram_icon.svg" alt="Instagram"
-          /></a>
-        </div>
-      </footer>
-    </div>
+        <footer class="page-footer">
+          <p>Find Me On</p>
+          <div class="social-media">
+            <a href="https://github.com/Cruebee" target="_blank"
+              ><img src="img/github_icon.svg" alt="Github"
+            /></a>
+            <a href="https://twitter.com/cruebee" target="_blank"
+              ><img src="img/twitter_icon.svg" alt="Twitter"
+            /></a>
+            <a
+              href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
+              target="_blank"
+              ><img src="img/linkedin_icon.svg" alt="LinkedIn"
+            /></a>
+            <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
+              ><img src="img/instagram_icon.svg" alt="Instagram"
+            /></a>
+          </div>
+        </footer>
+      </div>
       <div class="logo-container">
         <img src="img/crue_logo.svg" alt="Crue Jameson" />
       </div>
