--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
       href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
-    <!--
+
+    <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
+
     <link
       rel="stylesheet"
       type="text/css"
       href="dist/css/style.production.css"
-    /> -->
+    />
   </head>
 
   <body>
@@ -117,7 +118,6 @@
       </div>
     </div>
 
-    <script src="src/js/sticky-nav.js"></script>
     <!-- <script src="src/js/tota11y.min.js"></script> -->
   </body>
 </html>
