--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,11 @@
       rel="stylesheet"
     />
     <!-- <link rel="stylesheet" type="text/css" href="src/css/styles.css" /> -->
-    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="dist/css/style.production.css"
+    />
   </head>
 
   <body>
