--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,11 @@
     <section class="contact-me content">
       <div class="contact-container">
         <h1 class="main-title">Contact Me</h1>
-        <form action="" method="post" class="contact-form">
+        <form
+          mailto="ericcjameson@gmail.com"
+          method="post"
+          class="contact-form"
+        >
           <div class="row">
             <div class="col-form_label">
               <label for="full-name">
@@ -121,7 +125,7 @@
               <br />
               <span
                 style="font-size: 18px;"
-                mailto="cruebeejameson@gmail.com"
+                mailto="ericcjameson@gmail.com"
                 class="required-field"
                 >* Indicates a required field.</span
               >
