--- a/contact.html
+++ b/contact.html
@@ -123,10 +123,7 @@
             <div class="submit-container">
               <input type="submit" value="Submit" />
               <br />
-              <span
-                style="font-size: 18px;"
-                mailto="ericcjameson@gmail.com"
-                class="required-field"
+              <span style="font-size: 18px;" class="required-field"
                 >* Indicates a required field.</span
               >
             </div>
